# rondo-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  IMPROVEMENTS.md  LICENSE  PARALLELISM.md  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/tapes/: demo.tape
crates/rondo-core/: Cargo.toml
crates/rondo-core/benches/: store.rs
crates/rondo-core/src/: config.rs  error.rs  export.rs  lib.rs  recurrence.rs  telemetry.rs
crates/rondo-core/src/domain/: focus.rs  journal.rs  mod.rs  task.rs
crates/rondo-core/src/export/: exporter.rs  mod.rs
crates/rondo-core/src/i18n/: en.toml  mod.rs
crates/rondo-core/src/store/: backup.rs  lock.rs  migrations.rs  mod.rs  plugin_kv.rs  queries.rs  seed.rs  sqlite.rs
crates/rondo-core/tests/: backup_smoke.rs  config.rs  deps_smoke.rs  export_smoke.rs  exporter_trait.rs  focus_smoke.rs  fuzz_parse_dt.rs  input_limits.rs  journal_smoke.rs  lock_smoke.rs  migrations_smoke.rs  mutations_smoke.rs  plugin_kv_smoke.rs  recurrence_smoke.rs  sqlite_rw.rs  telemetry.rs  undo_via_store.rs
crates/rondo-plugin-api/: Cargo.toml
crates/rondo-plugin-api/src/: action.rs  capabilities.rs  lib.rs  plugin.rs  registry.rs  view.rs
crates/rondo-plugin-api/tests/: contract.rs
crates/rondo-plugin-host/: Cargo.toml
crates/rondo-plugin-host/src/: error.rs  host.rs  lib.rs  manifest.rs  policy.rs
crates/rondo-plugin-host/tests/: host_kv.rs  host_smoke.rs  policy_smoke.rs  sample_plugin.rs
crates/rondo-tui/: Cargo.toml
crates/rondo-tui/benches/: render.rs
crates/rondo-tui/src/: a11y.rs  action.rs  app.rs  cli.rs  clock.rs  event.rs  filter.rs  focus.rs  fx.rs  lib.rs  main.rs  search.rs  sort.rs  strings.rs  theme.rs  tui.rs
crates/rondo-tui/src/app/: data_state.rs  mod.rs  modals_state.rs  ui_state.rs  undo.rs
crates/rondo-tui/src/app/handlers/: bulk.rs  dep.rs  due_date.rs  journal.rs  mod.rs  note.rs  pomodoro.rs  recurrence.rs  subtask.rs  task.rs
crates/rondo-tui/src/components/: add_subtask.rs  analytics.rs  command_palette.rs  confirm.rs  dep_overlay.rs  edit_due_date.rs  edit_recurrence.rs  edit_subtask.rs  edit_title.rs  filter_strip.rs  footer.rs  header.rs  help.rs  journal.rs  lang_picker.rs  mod.rs  multiline_editor.rs  plugin_overlay.rs  plugin_page.rs  plugins_overlay.rs  pomodoro.rs  quick_actions.rs  quick_add.rs  root.rs  search.rs  sidebar.rs  sort_overlay.rs  task_detail.rs  task_list.rs  task_picker.rs
crates/rondo-tui/src/plugins/builtin/: analytics.rs  bell.rs  calendar.rs  dep_graph.rs  focus_page.rs  mod.rs  pomodoro.rs
crates/rondo-tui/src/widgets/: bracket_panel.rs  due_badge.rs  empty.rs  markdown.rs  mod.rs  priority_badge.rs  priority_spine.rs  progress_bar.rs  ring.rs  sparkline.rs  viewspec.rs
crates/rondo-tui/tests/: cli_batch_limits.rs  cli_due.rs  cli_more.rs  cli_mutations.rs  cli_plugins.rs  cli_smoke.rs  escape_order.rs  external_plugin_show.rs  fuzz_parse_quick_add.rs  lang_cli.rs  render_smoke.rs  roundtrip_smoke.rs  snapshots.rs  state_bulk.rs  state_due_date.rs  state_recurrence.rs  state_transitions.rs
crates/rondo-tui/tests/common/: mod.rs
crates/rondo-tui/tests/roundtrip/: README.md  harness.rs
crates/rondo-tui/tests/snapshots/: snapshots__analytics_plugin_page.snap  snapshots__calendar_plugin_page.snap  snapshots__command_palette.snap  snapshots__command_palette.snap.new  snapshots__confirm_delete_overlay.snap  snapshots__dep_graph_plugin_page.snap  snapshots__detail_focused_subtasks_section.snap  snapshots__edit_title_overlay.snap  snapshots__empty_journal.snap  snapshots__empty_tasks.snap  snapshots__filter_completed_applied.snap  snapshots__filter_today_applied.snap  snapshots__focus_plugin_page.snap  snapshots__full_dashboard_140x42.snap  snapshots__help_overlay.snap  snapshots__journal_view.snap  snapshots__journal_view.snap.new  snapshots__lang_picker_overlay.snap  snapshots__narrow_terminal.snap  snapshots__plugins_overlay.snap  snapshots__pomodoro_overlay.snap  snapshots__pomodoro_overlay.snap.new  snapshots__quick_actions_overlay.snap  snapshots__quick_add_overlay.snap  snapshots__search_overlay.snap  snapshots__sidebar_focused.snap  snapshots__sort_overlay_created_desc.snap  snapshots__sort_overlay_default.snap  snapshots__sort_overlay_due_asc.snap  snapshots__sort_overlay_priority_desc.snap  snapshots__sort_overlay_title_asc.snap  snapshots__tasks_blocked.snap  snapshots__tasks_default.snap  snapshots__tasks_selected_second.snap  snapshots__visual_mode_multi_select.snap  snapshots__wide_terminal.snap
docs/: architecture.md  dev.md  keybindings.md  plugins.md
examples/plugins/exporter-org-mode/: Cargo.toml  plugin.toml
examples/plugins/exporter-org-mode/src/: lib.rs
examples/plugins/quote-of-the-day/: Cargo.toml  build.sh  plugin.toml  plugin.wasm
examples/plugins/quote-of-the-day/src/: lib.rs
examples/plugins/sync-localdir/: Cargo.toml  README.md  build.sh  plugin.toml  plugin.wasm
examples/plugins/sync-localdir/src/: lib.rs
fixtures/: demo-seed.sql  seed-v1.sql  seed.sql
review-snapshots/: 01-tasks.txt  02-tasks-selected-1.txt  03-tasks-blocked.txt  04-journal.txt  05-pomodoro.txt  06-command-palette.txt  07-narrow-80x24.txt  08-wide-160x40.txt
scripts/: demo-seed.sh
