[workspace]
resolver = "2"
members = ["crates/rondo-core", "crates/rondo-plugin-api", "crates/rondo-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Roniel <roniel.rack@gmail.com>"]
license = "MIT"
repository = "https://github.com/roniel-rondo/rondo-rust"

[workspace.dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-textarea = "0.7"
tui-input = "0.11"
throbber-widgets-tui = "0.8"
tui-big-text = "0.7"
strum = { version = "0.26", features = ["derive"] }
pulldown-cmark = "0.12"
thiserror = "1"
