[package]
name = "rondo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
toml = "0.8"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "store"
harness = false
