[package]
name = "rondo-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
