[package]
name = "rondo-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rondo-core = { path = "../rondo-core" }
rondo-plugin-api = { path = "../rondo-plugin-api" }
extism = "=1.10.0"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = "3.10"
