[package]
name = "rondo-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "rondo-rs"

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "rondo-rs"
path = "src/main.rs"
bench = false

[dependencies]
rondo-core = { path = "../rondo-core" }
rondo-plugin-api = { path = "../rondo-plugin-api" }
rondo-plugin-host = { path = "../rondo-plugin-host" }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-textarea = { workspace = true }
tui-input = { workspace = true }
throbber-widgets-tui = { workspace = true }
tui-big-text = { workspace = true }
tachyonfx = { workspace = true }
strum = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
nucleo = "0.5"

[dev-dependencies]
insta = { version = "1.40", features = ["yaml"] }
tempfile = "3.10"
regex = "1"
rusqlite = { workspace = true }
serial_test = "3"
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
proptest = "1"
criterion = "0.5"

[[bench]]
name = "render"
harness = false
